test/domains/compilerErrors/sparseSubdom-values.chpl

var RD: domain(1);
var SRD: sparse subdomain(RD);
var SSRD: sparse subdomain(SRD);

var AD: domain(int);
var SAD: sparse subdomain(AD);
var SSAD: sparse subdomain(SAD);
