test/domains/compilerErrors/sparseSubdom-values.good
sparseSubdom-values.chpl:7: error: sparse subdomains are currently supported only for rectangular domains
